--- a/war/index.html
+++ b/war/index.html
@@ -22,6 +22,10 @@
       <tr>
         <td><a href="stock_java_mta">Stock_java_mta</a></td>
       </tr>
+      <tr>
+       	<td><a href="stockdetails">Stock_Details_Servlet</a></td>  
+      <tr>
+      
     </table>
   </body>
 </html>
