--- a/war/index.html
+++ b/war/index.html
@@ -23,7 +23,7 @@
         <td><a href="stock_java_mta">Stock_java_mta</a></td>
       </tr>
       <tr>
-       	<td><a href="stockdetails">Stock_Details_Servlet</a></td>  
+       	<td><a href="stockdetails">StockDetailsServlet</a></td>  
       <tr>
       
     </table>
