--- a/war/index.html
+++ b/war/index.html
@@ -25,7 +25,10 @@
       <tr>
        	<td><a href="stockdetails">StockDetailsServlet</a></td>  
       <tr>
-      
+      <tr>
+       	<td><a href="portfolio">PortfolioServlet</a></td>  
+      <tr>
+            
     </table>
   </body>
 </html>
