--- a/war/index.html
+++ b/war/index.html
@@ -13,20 +13,11 @@
   </head>
 
   <body>
-    <h1>Hello Claudia!</h1>
+ 	 <h1> Stock Portfolio </h1>
 	
     <table>
       <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="stock_java_mta">Stock_java_mta</a></td>
-      </tr>
-      <tr>
-       	<td><a href="stockdetails">StockDetailsServlet</a></td>  
-      <tr>
-      <tr>
-       	<td><a href="portfolio">Exe 5 - show portfolio</a></td>  
+       	<td><a href="portfolio">Show Portfolio</a></td>  
       <tr>
             
     </table>
