--- a/war/index.html
+++ b/war/index.html
@@ -18,7 +18,7 @@
 	
     <table>
       <tr>
-       	<td><a href="portfolio">Show Portfolio</a></td>  
+       	<td><a href="portfolio">Exercise 7 portfolio</a></td>  
       <tr>
             
     </table>
